[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["foo-dogsquared <foo.dogsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day1 = { path = "./day1" }

[workspaces]
members = [
    "day1", 
]